refactor(index): remove support for obsolete ES7 TCP connection